Just can download and display archives RSS

--- a/res/layout/archives_item.xml
+++ b/res/layout/archives_item.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+      android:layout_weight="1"	  
+	  android:orientation="vertical">
+	    <TextView
+	        android:id="@+id/tv_title"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"/>
+	    <TextView
+	        android:id="@+id/tv_desc"
+	        android:gravity="right"
+	        android:layout_width="wrap_content" 
+	        android:layout_height="wrap_content"/>
+	</LinearLayout>
+<!-- 
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="horizontal"> 
+ 
   	<View android:layout_width="fill_parent" android:layout_height="wrap_content"></View>
-	<LinearLayout
+  	
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
       android:layout_weight="1"	  
@@ -22,3 +40,4 @@
 	</LinearLayout>
 	<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 </LinearLayout>
+-->
