--- a/res/layout/archives_item.xml
+++ b/res/layout/archives_item.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- 
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
@@ -14,14 +15,15 @@
 	        android:layout_width="wrap_content" 
 	        android:layout_height="wrap_content"/>
 	</LinearLayout>
-<!-- 
+
+-->
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="horizontal"> 
  
-  	<View android:layout_width="fill_parent" android:layout_height="wrap_content"></View>
+  	<View android:layout_width="4dip" android:layout_height="wrap_content"></View>
   	
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	  android:layout_width="fill_parent"
@@ -38,6 +40,5 @@
 	        android:layout_width="wrap_content" 
 	        android:layout_height="wrap_content"/>
 	</LinearLayout>
-	<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+	<ImageView android:id="@+id/thumb" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 </LinearLayout>
--->
