--- a/res/layout/archives_item.xml
+++ b/res/layout/archives_item.xml
@@ -36,7 +36,7 @@
 	        android:layout_height="wrap_content"/>
 	    <TextView
 	        android:id="@+id/tv_desc"
-	        android:gravity="right"
+	        android:gravity="left"
 	        android:layout_width="wrap_content" 
 	        android:layout_height="wrap_content"/>
 	</LinearLayout>
