--- a/res/layout/archives_item.xml
+++ b/res/layout/archives_item.xml
@@ -25,18 +25,21 @@
  
   	<View android:layout_width="4dip" android:layout_height="wrap_content"></View>
   	
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	<LinearLayout
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
       android:layout_weight="1"	  
 	  android:orientation="vertical">
 	    <TextView
 	        android:id="@+id/tv_title"
+	        android:lines="1"
+	        android:ellipsize="end"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"/>
 	    <TextView
 	        android:id="@+id/tv_desc"
-	        android:gravity="left"
+	        android:lines="3"
+	        android:ellipsize="end"
 	        android:layout_width="wrap_content" 
 	        android:layout_height="wrap_content"/>
 	</LinearLayout>
