--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,10 +8,18 @@
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         android:layout_weight="1" />
-    <Button android:id="@+id/btn_refresh"
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content" 
-		android:text="Refresh"/>
-
+    <LinearLayout android:orientation="horizontal"
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content">
+    	
+	    <Button android:id="@+id/btn_refresh"
+			android:layout_width="wrap_content" 
+			android:layout_height="wrap_content" 
+			android:text="@string/refresh"/>
+	    <Button android:id="@+id/btn_advise"
+			android:layout_width="wrap_content" 
+			android:layout_height="wrap_content" 
+			android:text="@string/advise"/>
+    </LinearLayout>
 </LinearLayout>
 
