--- a/res/layout/archives_item.xml
+++ b/res/layout/archives_item.xml
@@ -5,17 +5,21 @@
   android:layout_height="wrap_content"
   android:orientation="horizontal"
   android:gravity="center_vertical"
-  android:paddingLeft="5dip"
-  android:paddingRight="8dip"
   android:paddingTop="5dip"
   android:paddingBottom="5dip"> 
-  	<View android:layout_width="4dip" android:layout_height="wrap_content"></View>
+  	<ImageView 
+  		android:id="@+id/v_read"
+  		android:layout_width="6dip"
+  	    android:layout_height="fill_parent"
+  	    android:background="@color/pink">
+    </ImageView>
 	<LinearLayout
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
       android:layout_weight="1"	  
 	  android:orientation="vertical"
-	  android:layout_marginRight="10dip">
+	  android:paddingLeft="5dip"
+	  android:paddingRight="8dip">
 	    <TextView
 	        android:id="@+id/tv_title"
 	        android:maxLines="2"
@@ -37,5 +41,6 @@
 	<ImageView android:id="@+id/thumb" 
 		android:layout_width="60dip" 
 		android:layout_height="60dip"
+		android:layout_marginRight="10dip"
 		android:scaleType="centerInside"/>
 </LinearLayout>
