--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="example_title_color">#8a3014</color>
     <color name="examples_bg">#e6ddd5</color>
     <color name="pink">#ec95bf</color>
+    <color name="light_pink">#f9d6f3</color>
+    <color name="purple">#c8acc3</color>
 </resources>
