--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -25,7 +25,6 @@
 			<View android:layout_width="1px" 
 				android:layout_height="fill_parent" 
 				android:background="@color/purple"/>
-				
 			<LinearLayout android:orientation="horizontal"
 				android:gravity="center_vertical|center"
 				android:layout_alignParentRight="true"
@@ -33,10 +32,7 @@
 	    		android:layout_height="fill_parent">
 				<ImageView 
 					android:id="@+id/btn_refresh"
-				    android:layout_marginTop="3px"
-				    android:layout_marginBottom="3px"
-					android:scaleType="fitCenter"
-					android:layout_width="wrap_content" 
+					android:layout_width="30dip" 
 					android:layout_height="wrap_content" 
 					android:src="@android:drawable/ic_menu_rotate"/>
 			    <ProgressBar
@@ -50,11 +46,9 @@
 			<View 
 				android:layout_width="1px" 
 				android:layout_height="fill_parent" 
-				android:background="@color/purple"/>
+				android:background="@color/purple"/>				
 			<ImageView android:id="@+id/btn_settings"
-			    android:layout_marginTop="3px"
-			    android:layout_marginBottom="3px"
-				android:scaleType="fitCenter"
+				android:padding="5dip"
 				android:layout_width="40dip" 
 				android:layout_height="wrap_content" 
 				android:src="@android:drawable/ic_menu_preferences"/>
