--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,72 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-    <RelativeLayout
-    	android:id="@+id/title"
-    	android:background="@color/light_pink"
-    	android:layout_alignParentTop="true" 
-    	android:layout_width="fill_parent"
-    	android:layout_height="40dip">
-    	<TextView
-    		android:gravity="center_vertical"
-    		android:layout_alignParentLeft="true"
-			android:layout_width="wrap_content" 
-			android:layout_height="fill_parent" 
-			android:textSize="20dip"
-			android:paddingLeft="8dip"
-			android:text="美丽日志"/>
-		<LinearLayout android:orientation="horizontal"
-			android:gravity="center_vertical|right"
-			android:layout_alignParentRight="true"
-    		android:layout_width="fill_parent"
-    		android:layout_height="fill_parent">
-			<View android:layout_width="1px" 
-				android:layout_height="fill_parent" 
-				android:background="@color/purple"/>
-			<LinearLayout android:orientation="horizontal"
-				android:gravity="center_vertical|center"
-				android:layout_alignParentRight="true"
-	    		android:layout_width="40dip"
-	    		android:layout_height="fill_parent">
-				<ImageView 
-					android:id="@+id/btn_refresh"
-					android:layout_width="30dip" 
-					android:layout_height="wrap_content" 
-					android:src="@android:drawable/ic_menu_rotate"/>
-			    <ProgressBar
-			    	android:id="@+id/pb_download"
-			    	android:layout_gravity="center_vertical"
-			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
-			        style="?android:attr/progressBarStyleSmall"
-			        android:visibility="gone" />				
-	    	</LinearLayout>				
-			<View 
-				android:layout_width="1px" 
-				android:layout_height="fill_parent" 
-				android:background="@color/purple"/>				
-			<ImageView android:id="@+id/btn_settings"
-				android:padding="5dip"
-				android:layout_width="40dip" 
-				android:layout_height="wrap_content" 
-				android:src="@android:drawable/ic_menu_preferences"/>
-			
-		</LinearLayout>
-    </RelativeLayout>
-	<View android:id="@+id/title_bottom_border"
-		android:layout_below="@id/title"
-		android:layout_width="fill_parent" 
-		android:layout_height="1px"
-		android:background="@color/purple"/> 
-	
+	<include layout="@layout/window_title" />	
     <ListView
         android:id="@android:id/list"
-        android:layout_below="@id/title_bottom_border"
-        android:layout_alignParentBottom="true"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         android:layout_weight="1" />
-</RelativeLayout>
+</LinearLayout>
 
