--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="pink">#ec95bf</color>
     <color name="light_pink">#f9d6f3</color>
     <color name="purple">#c8acc3</color>
+    <color name="deep_pink">#bc2c8c</color>
 </resources>
