--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="light_pink">#f9d6f3</color>
     <color name="purple">#c8acc3</color>
     <color name="deep_pink">#bc2c8c</color>
+    <color name="thin_pink">#fff7fd</color>
 </resources>
