--- a/res/layout/archive.xml
+++ b/res/layout/archive.xml
@@ -3,7 +3,11 @@
 	android:orientation="vertical"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-    <include layout="@layout/window_title" />	
+    <include layout="@layout/window_title" />
+    <TextView android:id="@+id/tv_archive_title"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content" 
+	    android:textColor="@color/light_pink"/>	
 	<WebView
 	    android:id="@+id/webview"   
 	    android:layout_width="fill_parent"
