--- a/res/layout/window_title.xml
+++ b/res/layout/window_title.xml
@@ -7,15 +7,15 @@
 	<LinearLayout
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
-	    android:layout_height="40dip"
+	    android:layout_height="46dip"
 	    android:gravity="center_vertical"
 	    android:background="@color/light_pink">
 	    
 		<LinearLayout android:orientation="horizontal"
 			android:gravity="center_vertical|center"
 			android:layout_alignParentRight="true"
-			android:padding="5dip"
-	   		android:layout_width="40dip"
+			android:padding="3dip"
+	   		android:layout_width="46dip"
 	   		android:layout_height="fill_parent">
 			<ImageView 
 				android:id="@+id/btn_left_top"
@@ -35,7 +35,7 @@
 			android:layout_width="1px" 
 			android:layout_height="fill_parent" 
 			android:background="@color/purple"/>   	
-	   	<cn.zadui.reader.view.AlwaysMarqueeTextView
+	   	<TextView
 	   		android:id="@+id/tv_title"
 	   		android:gravity="center_vertical|center"
 			android:layout_width="wrap_content" 
@@ -54,9 +54,9 @@
 		<LinearLayout android:orientation="horizontal"
 			android:id="@+id/right_top_coner"
 			android:gravity="center_vertical|center"
-			android:padding="5dip"
+			android:padding="3dip"
 			android:layout_alignParentRight="true"
-	   		android:layout_width="40dip"
+	   		android:layout_width="46dip"
 	   		android:layout_height="fill_parent">
 
 			<ImageView android:id="@+id/btn_right_top"
