--- a/res/layout/archives_item.xml
+++ b/res/layout/archives_item.xml
@@ -6,29 +6,29 @@
   android:orientation="horizontal"
   android:gravity="center_vertical"
   android:paddingTop="5dip"
-  android:paddingBottom="5dip"
-  android:id="@+id/v_read">
-<!--   
+  android:paddingBottom="5dip">
+  
   	<ImageView 
   		android:id="@+id/v_read"
-  		android:layout_width="6dip"
-  	    android:layout_height="fill_parent"
+  		android:layout_margin="5dip"
+  		android:layout_width="3px"
+  	    android:layout_height="3px"
   	    android:visibility="gone"
-  	    android:background="@color/pink">
+  	    android:background="@color/purple">
     </ImageView>
--->    
+
 	<ImageView android:id="@+id/thumb" 
 		android:layout_width="60dip" 
 		android:layout_height="60dip"
-		android:layout_marginLeft="10dip"
+		android:layout_marginRight="10dip"
 		android:scaleType="centerInside"/>
-    
+	<!-- 		android:layout_marginLeft="10dip"
+	 -->    
 	<LinearLayout
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
       android:layout_weight="1"	  
 	  android:orientation="vertical"
-	  android:paddingLeft="10dip"
 	  android:paddingRight="10dip">
 	    <TextView
 	        android:id="@+id/tv_title"
