--- a/res/layout/archives_item.xml
+++ b/res/layout/archives_item.xml
@@ -1,35 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="fill_parent"
-  android:layout_height="wrap_content"
-  android:orientation="horizontal"
-  android:gravity="center_vertical"
-  android:paddingTop="5dip"
-  android:paddingBottom="5dip">
-  
-  	<ImageView 
-  		android:id="@+id/v_read"
-  		android:layout_margin="5dip"
-  		android:layout_width="3px"
-  	    android:layout_height="3px"
-  	    android:visibility="gone"
-  	    android:background="@color/purple">
-    </ImageView>
-
-	<ImageView android:id="@+id/thumb" 
-		android:layout_width="60dip" 
-		android:layout_height="60dip"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:orientation="horizontal"
+	android:gravity="center_vertical"
+	android:paddingLeft="10dip"
+	android:paddingTop="10dip"
+	android:paddingRight="10dip"
+	android:paddingBottom="10dip">
+    
+    <RelativeLayout 		
+    	android:layout_width="80dip" 
+		android:layout_height="85dip"
 		android:layout_marginRight="10dip"
-		android:scaleType="centerInside"/>
+		android:layout_gravity="right"
+		android:background="@drawable/thumb_background">
+		<ImageView android:id="@+id/thumb" 
+			android:paddingLeft="5dip"
+			android:paddingTop="5dip"
+			android:paddingRight="5dip"
+			android:paddingBottom="10dip"		
+			android:layout_width="fill_parent" 
+			android:layout_height="fill_parent"
+			android:scaleType="centerInside"
+			android:src="@drawable/default_thumb"/>
+		<ImageView android:id="@+id/v_read" 
+			android:layout_width="fill_parent" 
+			android:layout_height="fill_parent"
+			android:background="@drawable/unread"
+			android:visibility="gone"/>
+	    </RelativeLayout>
+
 	<!-- 		android:layout_marginLeft="10dip"
 	 -->    
 	<LinearLayout
 	  android:layout_width="fill_parent"
 	  android:layout_height="wrap_content"
       android:layout_weight="1"	  
-	  android:orientation="vertical"
-	  android:paddingRight="10dip">
+	  android:orientation="vertical">
 	    <TextView
 	        android:id="@+id/tv_title"
 	        android:maxLines="2"
