--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:divider="@color/light_pink"
         android:dividerHeight="1px"
-        android:layout_weight="1" />
+        android:layout_weight="1" 
+        android:background="@drawable/background"
+        android:cacheColorHint="#00000000"/>
 </LinearLayout>
 
