--- a/res/layout/window_title.xml
+++ b/res/layout/window_title.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--  
+<LinearLayout 
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
+-->
     
-	<LinearLayout
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
-	    android:layout_height="46dip"
+	    android:layout_height="wrap_content"
 	    android:gravity="center_vertical"
-	    android:background="@color/light_pink">
+    	android:background="@drawable/window_title">
+	    <!-- android:background="@color/light_pink -->
 	    
 		<LinearLayout android:orientation="horizontal"
 			android:gravity="center_vertical|center"
 			android:layout_alignParentRight="true"
 			android:padding="3dip"
-	   		android:layout_width="46dip"
-	   		android:layout_height="fill_parent">
+	   		android:layout_width="55dip"
+	   		android:layout_height="wrap_content">
+	   		<!-- 
 			<ImageView 
 				android:id="@+id/btn_left_top"
 				android:layout_width="fill_parent" 
 				android:layout_height="fill_parent" 
 				android:scaleType="centerInside"
 				android:src="@android:drawable/ic_menu_rotate"/>
+	   		-->
+			<ImageView 
+				android:id="@+id/btn_left_top"
+				android:layout_width="fill_parent" 
+				android:layout_height="fill_parent" 
+				android:scaleType="centerInside"
+				android:src="@drawable/refresh_39"/>
 		    <ProgressBar
 		    	android:id="@+id/pb_download"
 		    	android:layout_gravity="center_vertical"
@@ -30,11 +41,19 @@
 		        android:layout_height="wrap_content"
 		        style="?android:attr/progressBarStyleSmall"
 		        android:visibility="gone" />				
-	   	</LinearLayout>	    
+	   	</LinearLayout>	 
+		<ImageView 
+			android:layout_width="wrap_content" 
+			android:layout_height="fill_parent" 
+			android:scaleType="centerInside"
+			android:src="@drawable/window_title_split"/>
+	   	   
+	   	<!--  
 		<View 
 			android:layout_width="1px" 
 			android:layout_height="fill_parent" 
 			android:background="@color/purple"/>   	
+		-->
 	   	<TextView
 	   		android:id="@+id/tv_title"
 	   		android:gravity="center_vertical|center"
@@ -45,30 +64,44 @@
 			android:ellipsize="marquee"
 			android:text="@string/app_name"
 			android:layout_weight="1"/>
-			
+		<!--  
 		<View 
 			android:layout_width="1px" 
 			android:layout_height="fill_parent" 
 			android:background="@color/purple"/>			
-			    	
+		-->  	
+		<ImageView 
+			android:layout_width="wrap_content" 
+			android:layout_height="fill_parent" 
+			android:scaleType="centerInside"
+			android:src="@drawable/window_title_split"/>
 		<LinearLayout android:orientation="horizontal"
 			android:id="@+id/right_top_coner"
 			android:gravity="center_vertical|center"
 			android:padding="3dip"
 			android:layout_alignParentRight="true"
-	   		android:layout_width="46dip"
-	   		android:layout_height="fill_parent">
-
+	   		android:layout_width="55dip"
+	   		android:layout_height="wrap_content">
+			<!--  
 			<ImageView android:id="@+id/btn_right_top"
 				android:layout_width="fill_parent" 
 				android:scaleType="centerInside"
 				android:layout_height="fill_parent" 
 				android:src="@android:drawable/ic_menu_preferences"/>
-	   	</LinearLayout>	  						
+			-->
+			<ImageView android:id="@+id/btn_right_top"
+				android:layout_width="fill_parent" 
+				android:scaleType="centerInside"
+				android:layout_height="fill_parent" 
+				android:src="@drawable/settings_39"/>
+	   	</LinearLayout>
+	   		  						
 	</LinearLayout>
+<!--  
 	<View android:id="@+id/title_bottom_border"
 		android:layout_width="fill_parent" 
 		android:layout_height="1px"
 		android:background="@color/purple"/>
-</LinearLayout>
+</LinearLayout>	
+-->
 
