--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,7 +11,8 @@
     <color name="example_title_color">#8a3014</color>
     <color name="examples_bg">#e6ddd5</color>
     <color name="pink">#ec95bf</color>
-    <color name="light_pink">#f9d6f3</color>
+    <!--  color name="light_pink">#f9d6f3</color -->
+    <color name="light_pink">#f0c7cf</color>
     <color name="purple">#c8acc3</color>
     <color name="deep_pink">#bc2c8c</color>
     <color name="thin_pink">#fff7fd</color>
