change button image of the home. And add code for in app update

--- a/res/layout/about_dialog.xml
+++ b/res/layout/about_dialog.xml
@@ -18,4 +18,11 @@
 	    android:layout_width="fill_parent"
 	  	android:layout_height="wrap_content"
 	  	android:textColor="@color/white" />
+	<TextView 
+    	android:textAppearance="?android:attr/textAppearanceMedium"
+    	android:id="@+id/tv_down_new_version"
+	    android:layout_width="fill_parent"
+	  	android:layout_height="wrap_content"
+	  	android:textColor="@color/white" />
+	  	
 </LinearLayout>
